Valid Arrangement of Pairs